# Network-Security-With-ML

./: .gitignore  LICENSE  README.md  demo.py  main.py  pyproject.toml  requirements.txt  setup.py  train.py
networksecurity/: __init__.py
networksecurity/components/: __init__.py  data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
networksecurity/constants/: __init__.py
networksecurity/entity/: __init__.py  artifact_entity.py  config_entity.py
networksecurity/exception/: __init__.py
networksecurity/logging/: __init__.py
networksecurity/pipeline/: __init__.py  prediction_pipeline.py  training_pipeline.py
networksecurity/utils/: __init__.py  main_utils.py  ml_utils.py
